--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
       <div class="row">
           <div class="twelve columns" style="padding-top:64px;">
-            <p class="center">Kofficons are design and maintain by <a href="https://twitter.com/guillaumeberry" target="_blank">Guillaume Berry</a>.</p>
+            <p class="center">Kofficons are designed and maintained by <a href="https://twitter.com/guillaumeberry" target="_blank">Guillaume Berry</a>.</p>
           </div> 
       </div>
     </div>
